# DemandForeCast

./: .env.example  .gitignore  README.md  clean_eilers.py  explore.ipynb  pyproject.toml
Docs/: EDA.md  Forecast_Workflow.docx
Docs/presentation/: 01 Initial Clustering Results.pptx
config/: clean_eilers.yml
config/forecast_clustering/: default.yml
config/forecast_joined_data/: clean.yml
config/game_attr_cleaning/: dev.yml  prod.yml
config/performance_aggregation/: monthly.yml
config/raw_cleaning/: generic.yml  performance.yml
notebooks/: 01- Clean Game DNA attr.ipynb  01- Clean Game DNA mappin.ipynb  01- Eilers data exploration.ipynb  01- Eilers data exploration.ipynb.ipynb  02-game_attr_cluster_pipline.ipynb  clean_eilers_databricks.ipynb  clustering.ipynb  forecast_clustering_demo.ipynb  holdout_like_game_clustering.ipynb  test.ipynb
notebooks/tests/: clustering.ipynb  forecast_clustering_demo.ipynb  holdout_like_game_clustering.ipynb  test.ipynb
scripts/: rebuild_performance_canonical_suppliers.py  run_generic_raw_cleaning.py  run_raw_cleaning.py
scripts/adhoc/: rebuild_performance_canonical_suppliers.py  update_cluster_feature_minimum.py  update_theme_clustering_notebook.py
scripts/aggregation/: run_performance_aggregation.py
scripts/cleaning/: clean_eilers.py  clean_game_attr.py  clean_sales_bronze.py  run_generic_raw_cleaning.py  run_raw_cleaning.py
scripts/forecast/: run_forecast_clustering.py  run_forecast_joined_data.py
src/: __init__.py
src/pipelines/: __init__.py  config_paths.py  (+3 more)
tests/: test_raw_cleaning.py
