[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-forecast"
version = "0.1.0"
description = "Demand forecast raw cleaning and modeling utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools]
packages = ["src", "src.data", "src.pipelines"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
